content sebagian masuk. tinggal nunggu gambar2 dari cleint

--- a/index.html
+++ b/index.html
@@ -169,29 +169,30 @@
 				<div class="col-md-4 col-sm-4 col-xs-12 wow fadeInLeft" data-wow-delay=".2s">
 					<div class="service-desc">
 						<div class="icon-box">
-							<img src="img/w1.png">
+							<img src="img/w1.png" alt="icon">
                             <h3> Who We Are <br>  <br></h3>
 						</div>
                     <div class="wow bounceInLeft" data-wow-delay=".5s">
                     <img src="img/profil.png" alt="profil">
 						<div class="service-content ">
-							<h4>Responsive Web design</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, vitae. Earum libero repellat excepturi in, deserunt, hic voluptatem placeat tenetur neque ullam sit.</p>
-						</div>
+							<p>Noras Nusantara, was founded in Bandung, Indonesia in 2011 by a group of professionals who had many experiences in exploration and development process of natural resources especially in Indonesia. </p>
+							<a href="#"><p><i><u>Read more</u></i></p></a>
+                        </div>
 					</div>
                     </div>
 				</div>
 				<div class="col-md-4 col-sm-4 col-xs-12 wow fadeInLeft" data-wow-delay=".5s">
 					<div class="service-desc">
 						<div class="icon-box ">
-                        <img src="img/w3.png">
+                        <img src="img/w3.png" alt="icon">
                             <h3> Why Choose <br>Noras Nusantara ? </h3>
 						</div>
                           <div class="wow bounceInLeft" data-wow-delay=".5s">
                     <img src="img/profil.png" alt="profil">
 						<div class="service-content">
-							<h4>Web development</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, vitae. Earum libero repellat excepturi in, deserunt, hic voluptatem placeat tenetur neque ullam sit.</p>
+							<p>We develop optimal organization structure to achieve company objective.</p>
+                            <br>
+                            <a href="#"><p><i><u>Read more</u></i></p></a>
 						</div>
 					</div>
                     </div>
@@ -199,21 +200,22 @@
 				<div class="col-md-4 col-sm-4 col-xs-12 wow fadeInLeft" data-wow-delay=".8s">
 					<div class="service-desc">
 						<div class="icon-box">
-                        <img src="img/w2.png">
+                        <img src="img/w2.png" alt="icon">
                             <h3> Our Mission <br><br> </h3>
                           <div class="wow bounceInLeft" data-wow-delay=".5s">
                     	<img src="img/profil.png" alt="profil">
 						<div class="service-content">
-							<h4>graphics design</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, vitae. Earum libero repellat excepturi in, deserunt, hic voluptatem placeat tenetur neque ullam sit.</p>
-						</div>
+							<p>Our mission is to be the world’s leading service provider for the collection and interpretation of data relating to the earth’s surface and sub-surface and for associated services</p>
+							<a href="#"><p><i><u>Read more</u></i></p></a>
+
+                        </div>
 					</div>
                     </div>
 				</div>
 						
 			</div> <!-- row end -->
 		</div> <!-- container end -->
-       
+       </div>
 	</section>
 	<!-- Service section End -->
 	
@@ -454,172 +456,10 @@
 			</div><!--/ Main row end -->
 		</div><!--/ Container end -->
 	</section>
-	<!-- section portfolio end-->
-
 	
-	<!-- video background section start 
-
-	 <section id="video" class="hero landing hero-section">
-        <div class="video-background-container">
-            <video preload="auto" autoplay loop muted class="video-background">
-                <source type="video/mp4" src="videos/google.mp4" />
-                <source type="video/ogg" src="videos/google.ogv" />
-                <source type="video/webm" src="videos/google.webm" />
-            </video>
-        </div> 
-
-        <div class="parallax-overlay"></div>
-
-        <div class="container">
-            <div class="hero-content text-center">
-                <div class="hero-text" >
-                    <h2 class="hero-title">Are you intrested ? </h2>
-                    <p class="hero-description">video documentasi dengan format mp4,ogg,webm</p>
-                </div><!--/ Hero text end 
-            </div><!--/ Hero content end 
-        </div><!--/ Container end 
-    </section><!--/ Home end -->
-
-	<!-- video background section end -->
-
-	<!-- TEAM section strat 
-	<section id="team" class="team">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="header-desc text-center">
-						<div class="header-content">
-							<h3 class="big-title">Our Members</h3>
-							<span>our expert team</span>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="team-mebers">
-					<div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".3s">
-						<div class="single-member">
-							<img src="images/team/team1.jpg" alt="" class="img-responsive">
-							<div class="member-overlay">
-								<h4> Memeber details</h4>	
-								<div class="line"></div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas magni, laborum ipsa. Magnam natus incidunt explicabo excepturi.</p>
-								<div class="member-desc">
-									<h4>Darn Oscar</h4>
-									<h5>web designer</h5>
-								</div>
-							</div>
-
-							<div class="member-content">
-								<div class="member-desc">
-									<h4>Darn Oscar</h4>
-									<h5>web designer</h5>
-								</div>
-								<div class="member-socail">
-									<ul class="list-inline">
-										<li> <a href="#"><i class="fa fa-facebook"></i> </a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa fa-behance"></i></a></li>
-										<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".6s">
-						<div class="single-member">
-							<img src="images/team/team2.jpg" alt="" class="img-responsive">
-							<div class="member-overlay">
-								<h4> Memeber details</h4>	
-								<div class="line"></div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas magni, laborum ipsa. Magnam natus incidunt explicabo excepturi.</p>
-								<div class="member-desc">
-									<h4>Darn Oscar</h4>
-									<h5>web designer</h5>
-								</div>
-							</div>
-							<div class="member-content">
-								<div class="member-desc">
-									<h4>Darn Oscar</h4>
-									<h5>web designer</h5>
-								</div>
-								<div class="member-socail">
-									<ul class="list-inline">
-										<li> <a href="#"><i class="fa fa-facebook"></i> </a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa fa-behance"></i></a></li>
-										<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".9s">
-						<div class="single-member">
-							<img src="images/team/team6.jpg" alt="" class="img-responsive">
-							<div class="member-overlay">
-								<h4> Memeber details</h4>	
-								<div class="line"></div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas magni, laborum ipsa. Magnam natus incidunt explicabo excepturi.</p>
-								<div class="member-desc">
-									<h4>Darn Oscar</h4>
-									<h5>web designer</h5>
-								</div>
-							</div>
-							<div class="member-content">
-								<div class="member-desc">
-									<h4>Darn Oscar</h4>
-									<h5>web designer</h5>
-								</div>
-								<div class="member-socail">
-									<ul class="list-inline">
-										<li> <a href="#"><i class="fa fa-facebook"></i> </a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa fa-behance"></i></a></li>
-										<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="1.1s">
-						<div class="single-member">
-							<img src="images/team/team4.jpg" alt="" class="img-responsive">
-							<div class="member-overlay">
-								<h4> Memeber details</h4>	
-								<div class="line"></div>
-								<p explicabo excepturi.</p>
-								<div class="member-desc">
-									<h4>Darn Oscar</h4>
-									<h5>web designer</h5>
-								</div>
-							</div>
-
-							<div class="member-content">
-								<div class="member-desc">
-									<h4>Darn Oscar</h4>
-									<h5>web designer</h5>
-								</div>
-								<div class="member-socail">
-									<ul class="list-inline">
-										<li> <a href="#"><i class="fa fa-facebook"></i> </a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa fa-behance"></i></a></li>
-										<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div> <!-- col-md-3 end -->
-				</div>
-			</div> <!-- row end -->
-		</div> <!-- container end -->
-	</section>
 
 
 
-			</div>
 
 	<!-- Section testimonial start -->
 	<section id="testimonial" class="parallax1">
@@ -704,7 +544,7 @@ We collects, processes, and interprets data related to the earth’s surface and
             <div class="container-fluid">
 					<div class="col-md-1 wow fadeInUp" data-wow-delay=".2s">
 						<div class="blog-desc">
-							<img src="img/1.png" alt="" class="img-responsive">
+							<img src="img/3.png" alt="" class="img-responsive">
 							<div class="blog-overlay">
 								<a class="blink" href="#"><i class="fa fa-link"></i></a>
 							</div>
@@ -747,7 +587,7 @@ We collects, processes, and interprets data related to the earth’s surface and
 					</div>
 					<div class="col-md-1 wow fadeInUp" data-wow-delay=".2s">
 						<div class="blog-desc">
-							<img src="img/3.png" alt="" class="img-responsive">
+							<img src="img/1.png" alt="" class="img-responsive">
 							<div class="blog-overlay">
 								<a class="blink" href="#"><i class="fa fa-link"></i></a>
 							</div>
@@ -859,10 +699,12 @@ We collects, processes, and interprets data related to the earth’s surface and
 	    		</div>
 
 			</div>
-	    </div>
-		<div class="map" id="map"></div>
+	   <div class="m20" id="map"></div>
+		<div class="col-lg-6 img-responsive" >
+      	<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d247.85946621153676!2d106.789348!3d-6.296357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s53+Jl.+Lebak+Bulus+Raya+I!5e0!3m2!1sid!2s!4v1426960795778" width="900" height="350" frameborder="0" style="border:0"></iframe>
+      </div>
+      </div>
 	</section><!--/ Map end here -->
-
 	<!-- footer start -->
 
 	<footer id="footer">
