--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
      <!-- Prettyphoto -->
-	<link rel="stylesheet" href="css/prettyPhoto.css">
     <!-- FontAwesome -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <!--Line icon font -->
@@ -32,8 +31,6 @@
     <!-- Responsive styles-->
     <link rel="stylesheet" href="css/responsive.css">
     <!-- circle counter -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -60,11 +57,11 @@
 
     			<div class="collapse navbar-collapse clearfix" id="bs-example-navbar-collapse-1" role="navigation">
     				<ul class="nav navbar-nav navbar-right">
-    					<li><a class="page-scroll" href="#header"> home</a></li>
+    					<li><a class="page-scroll" href="#header"> Home</a></li>
     					<li><a class="page-scroll" href="#about">About Us</a></li>
-    					<li><a class="page-scroll" href="#work">work</a></li>
-    					<li><a class="page-scroll" href="#sevices">services</a></li>
-    					<li><a class="page-scroll" href="#contact" >contact</a></li>
+    					<li><a class="page-scroll" href="#work">Work</a></li>
+    					<li><a class="page-scroll" href="#sevices">Services</a></li>
+    					<li><a class="page-scroll" href="#contact" >Contact</a></li>
     				</ul>
     			</div>
     		</div> <!-- row end -->
@@ -89,7 +86,7 @@
 			    	<img class="img-responsive" src="images/slider/bg3.jpg" alt="slider">
                     <div class="slider-content">
                     	<div class="col-md-12 text-center">
-                    		<div class="slider-text italic">
+                    		<div class="slider-text">
 	                        	<h2 class="animated2">Welcome to Noras Nusantara </h2>
 	                        	<h3 class="animated3">We are your ultimate choice to lead a way</h3>
 	                        	<h5 class="animated6">lets introduce</h5>
