--- a/admin/pages/login.html
+++ b/admin/pages/login.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Bootstrap Admin Theme</title>
+    <title>Admin noras nusantara</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -37,9 +37,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
+            	<div class="img-responsive text-center">
+                <img src="../img/logo.png" alt="logo">
                 <div class="login-panel panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Please Sign In</h3>
+                        <h3 class="panel-title">Login ke Admin Page</h3>
                     </div>
                     <div class="panel-body">
                         <form role="form">
@@ -61,10 +63,11 @@
                         </form>
                     </div>
                 </div>
+                </div>
             </div>
         </div>
     </div>
-
+	<div class="parallax-overlay"></div>
     <!-- jQuery -->
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 
