baru revisi terakir

--- a/index.html
+++ b/index.html
@@ -94,13 +94,40 @@
 	                        	<h2 class="animated7">Welcome to Noras Nusantara </h2>
 	                        	<h3 class="animated7">We are your ultimate choice to lead a way</h3>
 	                        	<h5 class="animated7">lets introduce</h5>
-	                        	<a href="#service" class="animated4 page-scroll" ><i class="fa fa-angle-down"></i></a>
+	                        	<a href="#about" class="animated7 page-scroll" ><i class="fa fa-angle-down"></i></a>
                         	</div>
                     	</div>
                     </div>
 			    </div><!--/ Carousel item end -->
                 
-                	
+         		<div class="item">
+			    	<img class="img-responsive" src="images/slider/bg3.jpg" alt="slider">
+                    <div class="slider-content">
+                    	<div class="col-md-12 text-center">
+                    		<div class="slider-text">
+	                        	<h2 class="animated7">Welcome to Noras Nusantara </h2>
+	                        	<h3 class="animated7">We are your ultimate choice to lead a way</h3>
+	                        	<h5 class="animated7">lets introduce</h5>
+	                        	<a href="#service" class="animated4 page-scroll" ><i class="fa fa-angle-down"></i></a>
+                        	</div>
+                    	</div>
+                    </div>
+			    </div><!--/ Carousel item end -->
+
+                 <div class="item">
+			    	<img class="img-responsive" src="images/slider/bg3.jpg" alt="slider">
+                    <div class="slider-content">
+                    	<div class="col-md-12 text-center">
+                    		<div class="slider-text">
+	                        	<h2 class="animated7">Welcome to Noras Nusantara </h2>
+	                        	<h3 class="animated7">We are your ultimate choice to lead a way</h3>
+	                        	<h5 class="animated7">lets introduce</h5>
+	                        	<a href="#service" class="animated7 page-scroll" ><i class="fa fa-angle-down"></i></a>
+                        	</div>
+                    	</div>
+                    </div>
+			    </div><!--/ Carousel item end -->
+	
 
 			    <div class="item">
 			    	<img class="img-responsive" src="images/slider/bg42.jpg" alt="slider">
@@ -109,7 +136,7 @@
                             <h2 class="animated7"> We are Noras Nusantara</h2>
                             <h3 class="animated7">About continous Help</h3>	
                             <h5 class="animated7">lets introduce</h5>
-                            <a href="#service" class="animated6 page-scroll"><i class="fa fa-angle-down"> </i></a>     
+                            <a href="#service" class="animated7 page-scroll"><i class="fa fa-angle-down"> </i></a>     
                         </div>
                     </div>
 			    </div><!--/ Carousel item end -->
