--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
-    <title>aboutus</title>
+    <title>About Us</title>
 
     <!-- Mobile Specific Metas
   ================================================== -->
@@ -14,7 +14,7 @@
     <!-- CSS
   ================================================== -->
     <!-- Bootstrap -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
      <!-- Prettyphoto -->
     <!-- FontAwesome -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -30,8 +30,7 @@
     <link rel="stylesheet" href="css/presets/maincolor.css">
     <!-- Responsive styles-->
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/about.css">
-
+   
     <!-- circle counter -->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -70,8 +69,7 @@
     	</div> <!-- container end -->
     	</nav> <!-- nav end -->
     </header>
-<br>
-<br>
+
 	<!-- Service section Start -->
 	<section id="about" class="service">
 		<div class="container">
@@ -85,11 +83,11 @@
 			<div class="row text-center">
 				<div class="col-md-12 wow fadeInLeft" data-wow-delay=".2s">
 					<div class="service-desc">
-						<div class="icon-box col-xs-4">
+						<div class="icon-box col-xs-12">
 							<img src="img/w1.png" alt="icon">
                             <h3> Who We Are </h3>
                             </div>
-                    <div class=" col-md-11 wow fadeIn" data-wow-delay=".5s">
+                    <div class=" col-md-12 wow fadeIn" data-wow-delay=".5s">
 						<div class="service-content text-left">
 							<p>Noras Nusantara was founded in Bandung, Indonesia in 2011 by a group of professionals who had many experiences in exploration and development process of natural resources especially in Indonesia.
 We provides the people, equipment, expertise, and technology that support the exploration and development of the world’s natural resources. Services are mostly provided locally that involved in the early exploration and development phase of potential projects and are supported by a global knowledge base and resource pool of experienced personnel. The services are often offered in combination in order to achieve the optimum results for the clients.
@@ -132,7 +130,7 @@ Noras Nusantara has built an impressive team to implement our mission and operat
 			<div class="row text-center">
 				<div class="col-md-12 wow fadeInLeft" data-wow-delay=".2s">
 					<div class="service-desc">
-						<div class="icon-box col-xs-4"><br>
+						<div class="icon-box col-xs-12"><br>
 
 							<img src="img/w2.png" alt="icon">
                             <h3>Our Mission </h3>
@@ -187,7 +185,7 @@ Noras Nusantara achieves this mission through: <br>
 			<div class="row text-center">
 				<div class="col-md-12 wow fadeInLeft" data-wow-delay=".2s">
 					<div class="service-desc">
-						<div class="icon-box col-xs-4"><br>
+						<div class="icon-box col-xs-12"><br>
 
 							<img src="img/w3.png" alt="icon">
                             <h3>Why Choose Noras Nusantara? </h3>
