Layout selesai.. tinggal nunggu gambar baru

--- a/index.html
+++ b/index.html
@@ -244,19 +244,19 @@ The company was founded in 2011 by a group of professionals who had many experie
 						<p>lorem ipsum lorem</p>
 						<div class="col-md-6 ">
 							<figure class="effect-oscar wowload fadeInUp">
-							<img src="img/2ed.jpg" alt="techno">
+							<img src="img/h1.jpg" alt="techno">
 								<figcaption>
 								<h3 class="text-center">PASSIVE SEISMICTOMOGRAPHY (PST)</h3>
 								<p>TECHNOLOGY</P>
-								<a class="btn" href="#" >View more</a>
+								<a class="btn" href="technology.html#pst" >View more</a>
                         </div>
 						<div class="col-md-6">
                        <figure class=" effect-oscar wowload fadeInUp">
-						<img src="img/2ed.jpg" alt="techno">
+						<img src="img/h7.jpg" alt="techno">
 							<figcaption>
 								<h3 class="text-center">SURFACE GEOCHEMICAL</h3>
 								<p>TECHNOLOGY</P>
-								<a class="btn" href="#" >View more</a>
+								<a class="btn" href="technology.html#sg" >View more</a>
 							</figcaption>
 						</figure>
 						</div>
