jalanin nya via localhost yak.. udah ga pake html lagi gun... coba lu cek.. udah gw benerin beberapa bugs error script... cek dihistory aja kalo mau liat...
hobah..!!!

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				</div>
 			</div>
 
-			<div class="row text-justify>
+			<div class="row text-justify">
 				<div class="col-md-12 wow fadeInLeft" data-wow-delay=".2s">
 					<div class="col-md-6">
                     <img src="img/profil.png" alt="profil">
