gambar seadanya haha

--- a/aboutus.html
+++ b/aboutus.html
@@ -106,19 +106,12 @@ Noras Nusantara has built an impressive team to implement our mission and operat
 	
 	<!-- Work process start -->
 
-	<section id="process" class="process parallax2">
+	<section class="process">
+				<img class="img-responsive" src="images/parallax/parallax5.jpg" alt="">
 		<div class="parallax-overlay2"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12"><br>
-<br>
-<br>
-<br>
+			<div class="col-md-12"><br>
 
-				</div>
 			</div>
-		</div>
-        </div>
 	</section>
 	<!-- Work process end -->
 	
@@ -162,19 +155,13 @@ Noras Nusantara achieves this mission through: <br>
 	
 	<!-- Work process start -->
 
-	<section id="process" class="process parallax2">
-		<div class="parallax-overlay2"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12"><br>
-<br>
-<br>
-<br>
 
-				</div>
+	<section class="process">
+				<img class="img-responsive" src="images/parallax/p1.jpg" alt="">
+		<div class="parallax-overlay2"></div>
+			<div class="col-md-12"><br>
+
 			</div>
-		</div>
-        </div>
 	</section>
 	<!-- Work process end -->
     <!-- Service section Start -->
